Fixed btn group active z-index stack context relative to reselect dropdown- 998 (#1211)

--- a/assets/less/bootstrap/button-groups.less
+++ b/assets/less/bootstrap/button-groups.less
@@ -2,7 +2,6 @@
 // Button groups
 // --------------------------------------------------
 
-
 // Make the div behave like a button
 .btn-group {
   position: relative;
@@ -94,8 +93,6 @@
   outline: 0;
 }
 
-
-
 // Split button dropdowns
 // ----------------------
 
@@ -103,7 +100,9 @@
 .btn-group > .btn + .dropdown-toggle {
   padding-left: 8px;
   padding-right: 8px;
-  .box-shadow(~"inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)");
+  .box-shadow(
+    ~"inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)"
+  );
   *padding-top: 5px;
   *padding-bottom: 5px;
 }
@@ -125,7 +124,6 @@
 }
 
 .btn-group.open {
-
   // The clickable button for toggling the menu
   // Remove the gradient and set the same inset shadow as the :active state
   .dropdown-toggle {
@@ -157,7 +155,6 @@
   }
 }
 
-
 // Reposition the caret
 .btn .caret {
   margin-top: 8px;
@@ -168,9 +165,9 @@
   margin-top: 6px;
 }
 .btn-large .caret {
-  border-left-width:  5px;
+  border-left-width: 5px;
   border-right-width: 5px;
-  border-top-width:   5px;
+  border-top-width: 5px;
 }
 .btn-mini .caret,
 .btn-small .caret {
@@ -180,8 +177,6 @@
 .dropup .btn-large .caret {
   border-bottom-width: 5px;
 }
-
-
 
 // Account for other colors
 .btn-primary,
@@ -195,8 +190,6 @@
     border-bottom-color: @white;
   }
 }
-
-
 
 // Vertical button groups
 // ----------------------
